fixed issue with first nav link being out of place when dropdown is needed

--- a/css/styles.css
+++ b/css/styles.css
@@ -37,11 +37,7 @@ h1 {
 }
 
 .nav-item {
-    padding: 0px 12px;
-}
-
-.nav-item:first-of-type {
-    padding-left: 0px;
+    padding: 0px 18px;
 }
 
 .nav-link {
